Fixing menu dropdown on mobile (TOLP-5358)

--- a/tolid-ui/app/src/scss/_navbar.scss
+++ b/tolid-ui/app/src/scss/_navbar.scss
@@ -8,14 +8,10 @@
     letter-spacing: 0.1rem;
     font-weight: 700;
   }
-  .navbar-nav {
-    .nav-item {
-      .nav-link {
-        text-transform: uppercase;
-        font-size: 0.8rem;
-        font-weight: 700;
-        letter-spacing: 0.1rem;
-      }
-    }
+  .nav-link {
+    text-transform: uppercase;
+    font-size: 0.8rem;
+    font-weight: 700;
+    letter-spacing: 0.1rem;
   }
 }
